Fix spacing on mobile
[Story] [#170431076]
[Test] n
[Review] na

--- a/web/src/App.css
+++ b/web/src/App.css
@@ -38,4 +38,5 @@
 
 .project-bottom {
   background-image: url(./assets/background.jpg);
+  background-size: cover;
 }
